sample/retrieveUnpackaged/objects/Reports__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom setting for reports</description>
    <fields>
        <fullName>My_Financial_Hardships_for_Review_Today__c</fullName>
        <label>My Financial Hardships for Review Today</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfCallsReportID__c</fullName>
        <description>Report RecordID Reference to the Number Of Calls report</description>
        <label>NumberOfCallsReportID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonRoleID__c</fullName>
        <label>PersonRoleID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertiesInSubdivisionReportId__c</fullName>
        <label>PropertiesInSubdivisionReportId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SingleCustomerStoryBoardID__c</fullName>
        <label>SingleCustomerStoryBoardID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>YYYY/YY format e.g. 2008/09</inlineHelpText>
        <label>Year</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reports</label>
</CustomObject>